--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -1,14 +1,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+
 }
 
-header, footer {
+header, footer{
     background-color: #333333;
-    color:white;
-    padding: 10px;   
+    color: white;
+    padding: 10px;
 }
 
-header {
+header{
     font-size: 1.25rem;
 
 }
@@ -17,24 +18,24 @@ footer {
     font-size: 0.8rem;
 
 }
-section{
+section {
     background-color: lightgray;
     padding: 10px;
-    margin: 15, auto;
+    margin: 15px auto;
 }
 main {
-    margin: 0, auto;
+    margin: 0 auto;
     max-width: 800px;
 }
-
 h2 {
     border-bottom: 1px solid black;
 }
-
 picture img {
     box-shadow: 0 0 30px #333333;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
 }
-
 p {
     margin: 10px;
 }
