--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
 main img {
     width: 150px;
     height: auto;
-    border: 1ps solid black;
+    border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
