--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+:root {
+    --heading-background-color: darkblue;
+}
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -8,7 +11,7 @@ nav a {
     padding: 20px;
 }
 h1 {
-    color: darkblue;
+    color: var(--heading-background-color);
 }
 main img {
     width: 150px;
