--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+}
 :root {
     --heading-background-color: darkblue;
 }
@@ -14,6 +19,7 @@ h1 {
     color: var(--heading-background-color);
 }
 main img {
+    float: right;
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -23,24 +29,36 @@ main img {
 p {
     padding: 0;
 }
-main{
+main {
     max-width: 840px;
 }
-aside{
+aside {
+    position: relative;
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);/*1 */
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: center;
+}
+
+aside h2 {
+    position:absolute;
+    top: 7%;
+    left: 65px;
 }
 aside img {
     width: 200px;
     height: auto;
 }
-footer{
+
+footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/*CSS class selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid rgb(0, 0, 0 / 0.2);
+    background-color: #ddd;
+    color: black;
 }
